--- a/index.css
+++ b/index.css
@@ -120,3 +120,9 @@ iframe{
 .searchvisible{
     visibility: hidden;
 }
+
+.boxlist p{
+    padding-left:15px;
+    font-size: 20px;
+    font-weight: bold;
+}
