--- a/index.css
+++ b/index.css
@@ -78,7 +78,7 @@ ul {
     text-align: center;
 }
 
-.col img{
+#search img{
     width:140px;
 }
 
@@ -135,4 +135,9 @@ iframe{
 
 .boxlist a{
     color: 
+}
+
+.user img{
+    width:100px;
+    height:100px;
 }
